[package]
name = "dynamodb-utils"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws-config = { version = "1.1.7", features = ["behavior-version-latest"] }
aws-sdk-dynamodb = {version = "1.27.0"}
thiserror = { version = "1" }
serde = { version = "1" }
serde_json = { version = "1" }
serde_dynamo = { version = "4.2.14", features = ["aws-sdk-dynamodb+1"] }
