[package]
name = "dynamodb_utils"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws-config.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
aws-sdk-dynamodb = {version = "1.32.0"}
serde_dynamo = { version = "4.2.14", features = ["aws-sdk-dynamodb+1"] }
