[package]
name = "dynamodb_utils"
version.workspace = true
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws-config.workspace = true
aws-smithy-types-convert.workspace = true
futures-util.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
aws-sdk-dynamodb = {version = "1.49.0"}
serde_dynamo = { version = "4.2.14", features = ["aws-sdk-dynamodb+1"] }
