[package]
name = "s3_utils"
version = "0.1.0"
edition = "2021"
publish = false
rust-version = "1.75.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws-config = { version = "1.5.0", features = ["behavior-version-latest"] }
aws-sdk-s3 = { version = "1.31.0" }
aws-smithy-types-convert = { version = "0.60.8", features = ["convert-streams"] }
futures-util = "0.3.30"
tokio = { version = "1", default-features = false, features = ["io-util"] }
thiserror = { version = "1" }
base64 = { version = "0.21" }
serde = { version = "1" }
serde_json = { version = "1" }
chrono = { version = "0.4.38", default-features = false, optional = true }

[features]
default = ["chrono"]
chrono = ["dep:chrono", "aws-smithy-types-convert/convert-chrono"]
