[package]
name = "s3_utils"
version.workspace = true
edition = "2021"
publish = false
rust-version = "1.75.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws-config.workspace = true
thiserror.workspace = true
aws-smithy-types-convert.workspace = true
futures-util.workspace = true
aws-sdk-s3 = { version = "1.60.0" }
tokio = { version = "1.41.1", default-features = false, features = ["io-util"] }
base64 = { version = "0.22.1" }
serde.workspace = true
serde_json.workspace = true
chrono = { version = "0.4.38", default-features = false, optional = true }
urlencoding.workspace = true

[dev-dependencies]
tokio-test = "0.4.4"

[features]
default = ["chrono"]
chrono = ["dep:chrono", "aws-smithy-types-convert/convert-chrono"]
