[package]
name = "ssm_utils"
version = "0.1.0"
edition = "2021"
publish = false
rust-version = "1.75.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws-config = { version = "1.5.0", features = ["behavior-version-latest"] }
aws-sdk-ssm = {version = "1.30.0"}
thiserror = { version = "1" }
serde = { version = "1" }
serde_json = { version = "1" }
quick_cache =  { version = "0.5.1", optional = true }

[features]
default = ["cache"]
cache = ["dep:quick_cache"]
