[package]
name = "ssm_utils"
version = "0.1.0"
edition = "2021"
publish = false
rust-version = "1.76.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws-config = { version = "1.5.0", features = ["behavior-version-latest"] }
aws-sdk-ssm = { version = "1.30.0" }
thiserror = { version = "1" }

[features]
default = []
