[package]
name = "ssm_utils"
version.workspace = true
edition = "2021"
publish = false
rust-version = "1.76.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws-config.workspace = true
thiserror.workspace = true
aws-sdk-ssm = { version = "1.30.0" }
mini-moka = { version = "0.10.3", optional = true }

[features]
default = ["expire"]
expire = ["dep:mini-moka"]
